// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing initial render 1`] = `
<DocumentFragment>
  <div
    class="ui card"
  >
    <div
      class="content"
    >
      <div
        class="meta css-106mbhu"
      >
        <span>
          <i
            aria-hidden="true"
            class="filter icon"
          />
           Interaction type
        </span>
        <i
          aria-hidden="true"
          class="info circle icon"
        />
      </div>
      <div
        class="description"
      >
        <form
          class="ui form css-1rrhbx0"
        >
          <div
            class="field"
          >
            <div
              class="ui left icon input"
              data-testid="0_filterInput"
              data-tour="0_filterInput"
            >
              <input
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                class="search icon"
              />
            </div>
          </div>
        </form>
        <div
          class="ui items css-p5nlxd"
          data-tour="0_checkbox-list"
        >
          <div
            data-testid="0_checkbox-list"
          >
            <div
              class="css-tescqt"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="cc"
                    >
                      <input
                        class="hidden"
                        name="cc_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="cc_checkbox"
                      >
                        cc
                      </label>
                      <small>
                        cancer-cancer
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-tescqt"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="cs"
                    >
                      <input
                        class="hidden"
                        name="cs_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="cs_checkbox"
                      >
                        cs
                      </label>
                      <small>
                        cancer-stroma
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-tescqt"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="nn"
                    >
                      <input
                        class="hidden"
                        name="nn_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="nn_checkbox"
                      >
                        nn
                      </label>
                      <small>
                        normal-normal
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-tescqt"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="sc"
                    >
                      <input
                        class="hidden"
                        name="sc_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="sc_checkbox"
                      >
                        sc
                      </label>
                      <small>
                        stroma-stroma
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="extra content"
    >
      <button
        class="ui mini icon disabled right labeled button"
        data-testid="0_resetButton"
        data-tour="0_resetButton"
        disabled=""
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="undo icon"
        />
        Reset Filter
      </button>
      <div
        class="ui right floated statistic xs"
        data-testid="0_statistic"
        data-tour="0_statistic"
      >
        <div
          class="value"
        >
          0 / 4
        </div>
        <div
          class="label"
        >
          showing
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot testing one item is checked 1`] = `
<DocumentFragment>
  <div
    class="ui card"
  >
    <div
      class="content"
    >
      <div
        class="meta css-106mbhu"
      >
        <span>
          <i
            aria-hidden="true"
            class="filter icon"
          />
           Interaction type
        </span>
        <i
          aria-hidden="true"
          class="info circle icon"
        />
      </div>
      <div
        class="description"
      >
        <form
          class="ui form css-1rrhbx0"
        >
          <div
            class="field"
          >
            <div
              class="ui left icon input"
              data-testid="0_filterInput"
              data-tour="0_filterInput"
            >
              <input
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                class="search icon"
              />
            </div>
          </div>
        </form>
        <div
          class="ui items css-p5nlxd"
          data-tour="0_checkbox-list"
        >
          <div
            data-testid="0_checkbox-list"
          >
            <div
              class="css-tescqt"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checked checkbox"
                      data-testid="sc"
                    >
                      <input
                        checked=""
                        class="hidden"
                        name="sc_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="sc_checkbox"
                      >
                        sc
                      </label>
                      <small>
                        stroma-stroma
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fj4a12"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="cc"
                    >
                      <input
                        class="hidden"
                        name="cc_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="cc_checkbox"
                      >
                        cc
                      </label>
                      <small>
                        cancer-cancer
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fj4a12"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="cs"
                    >
                      <input
                        class="hidden"
                        name="cs_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="cs_checkbox"
                      >
                        cs
                      </label>
                      <small>
                        cancer-stroma
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fj4a12"
            >
              <div
                class="item"
              >
                <div
                  class="content"
                >
                  <div
                    class="description"
                  >
                    <div
                      class="ui checkbox"
                      data-testid="nn"
                    >
                      <input
                        class="hidden"
                        name="nn_checkbox"
                        tabindex="0"
                        type="checkbox"
                      />
                      <label
                        for="nn_checkbox"
                      >
                        nn
                      </label>
                      <small>
                        normal-normal
                      </small>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="extra content"
    >
      <button
        class="ui mini icon right labeled button"
        data-testid="0_resetButton"
        data-tour="0_resetButton"
      >
        <i
          aria-hidden="true"
          class="undo icon"
        />
        Reset Filter
      </button>
      <div
        class="ui right floated statistic xs"
        data-testid="0_statistic"
        data-tour="0_statistic"
      >
        <div
          class="value"
        >
          1 / 4
        </div>
        <div
          class="label"
        >
          showing
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
